--- a/plotting_distributions.ipynb
+++ b/plotting_distributions.ipynb
@@ -99,16 +99,22 @@
     {
       "cell_type": "code",
       "source": [
-        "#Pregunta 1-  de que salga\n",
-        "P_0 = 1/16\n",
-        "print(\"La probabilidad de que no haya palos blancos\", P_0)"
+        "#Exercise 1\n",
+        "print(\"La probabilidad de obtener zero palos blancos es de \" + str(6/16))\n",
+        "\n",
+        "#Exercise 2\n",
+        "print(\"La probabilidad de obtener un palo blanco es de \" + str(4/16))\n",
+        "\n",
+        "#Exercise 3\n",
+        "print(\"La probabilidad de obtener 1, 2 o 4 palos blancos \" + str(14/16))\n",
+        "print(\"Podemos saber la probabilidad dividiendo el area que queremos saber su probabilidad entre el area total\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8_kEQWYe_w7w",
-        "outputId": "19ff69d6-c84b-48ab-df81-4719e18ced76"
+        "id": "Jt4MIpIamnNu",
+        "outputId": "df1c0be3-7736-4ed2-e83b-38babbb7eb13"
       },
       "execution_count": null,
       "outputs": [
@@ -116,65 +122,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.0625\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Pregunta 2\n",
-        "P_1 = 4/16\n",
-        "print(\"La probabilidad de que haya un palo blanco\", P_1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8lKx7Xw4_6Ql",
-        "outputId": "b7033f3c-b525-446f-a293-8212ef90023c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.25\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Pregunta 3 - 4 palos\n",
-        "from scipy.special import comb\n",
-        "prob_1blanca = comb (4,1) * (1/2)**1 * (1/2)**3\n",
-        "\n",
-        "prob_2blancas = comb (4,2) * (1/2)**2 * (1/2)**2\n",
-        "\n",
-        "prob_3blancas = comb (4,3)  * (1/2)**3 * (1/2)**1\n",
-        "\n",
-        "\n",
-        "print(\"La probabilidad de que haya 1, 2 o 3 palitos blancos es \", str(prob_1blanca+prob_2blancas+prob_3blancas))\n",
-        "print(\"Podemos encontrar la probabilidad de que haya cada palito blanco dividiendo el area de cada uno, con el area total \")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tMS7fAU8ABZG",
-        "outputId": "b1724508-13c9-46d7-c77e-dfe79ca61ffe"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "La probabilidad de que haya 1, 2 o 3 palitos blancos es  0.875\n"
+            "La probabilidad de obtener zero palos blancos es de 0.375\n",
+            "La probabilidad de obtener un palo blanco es de 0.25\n",
+            "La probabilidad de obtener 1, 2 o 4 palos blancos 0.875\n",
+            "Podemos saber la probabilidad dividiendo el area que queremos saber su probabilidad entre el area total\n"
           ]
         }
       ]
